# BookKeeperVK

./: .gitignore  pyproject.toml  setup.cfg
core/: constants.py  launch_desktop.py  launch_tg.py  presenter.py  simple_client.py  utils.py
core/models/: budget.py  category.py  expense.py
core/repository/: abstract_repository.py  memory_repository.py  sqlite_repository.py
core/view/: abstract_view.py
db/: bookkeeper.db
models/: category.py  expense.py
repository/: abstract_repository.py  memory_repository.py  sqlite_repository.py
tests/: test_utils.py
tests/test_models/: test_budget.py  test_category.py  test_expense.py
tests/test_repository/: test_abstract_repository.py  test_memory_repository.py  test_sqlite_repository.py
