[tool.poetry]
name = "bookkeeper"
version = "0.1.0"
description = ""
authors = ["Nick_ituk <nick_ituk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.pytest.dependencies]
mypy = "^1.1.1"
pylint = "^2.17.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
